# no2migen

./: .gitmodules  LICENSE.md  README.md  setup.cfg
examples/: 1bitsquared_icebreaker_bitsy_muacm.py  1bitsquared_icebreaker_bitsy_usb.py  1bitsquared_icebreaker_usb.py  kosagi_fomu_muacm.py  kosagi_fomu_usb.py  migen_icebreaker_muacm.py
examples/firmware/: .gitignore  Makefile  console.c  console.h  dcd_no2usb_config.h  firmware.c  lnk-app.lds  msc_disk.c  start.S  tusb_config.h  usb_descriptors.c
src/no2migen/: __init__.py  litex.py  migen.py
